--- a/markup/home.html
+++ b/markup/home.html
@@ -388,7 +388,7 @@
               <div class="ico-box text-center"><i><img src="images/clock-ico.png" alt="image description"></i></div>
               <div class="text-box">
                 <h4>Некогда просматривать анкеты?</h4>
-                <p>Разместите свое резюме, чтобы работодатель мог напрямую связаться с вами и предложить вам работу</p><a href="#" class="btn ye-btn">Разместить резюме</a>
+                <p>Разместите свое резюме, чтобы работодатель мог напрямую связаться с вами и предложить вам работу</p><a href="#" class="btn ye-btn">Разместить вакансию</a>
               </div>
             </div>
           </div>
