--- a/markup/homey-black-list-employee-personal.html
+++ b/markup/homey-black-list-employee-personal.html
@@ -147,7 +147,7 @@
           </aside>
           <div id="content">
             <div class="holder">
-              <h1 class="h1">Добавить работника в черный список</h1>
+              <h1>Добавить работника в черный список</h1>
               <div class="agent-block">
                 <div class="wrap-box">
                   <div class="img-block">
