--- a/markup/homey-black-list-employer-personal(withautorization).html
+++ b/markup/homey-black-list-employer-personal(withautorization).html
@@ -141,7 +141,7 @@
                               <label for="label1">*Имя и фамилия работника</label>
                               <div class="form-group invalid">
                                 <input id="label1" type="text" placeholder="Имя и фамилия работника" required>
-                                <div class="invalid-massege">Поле обязательно для заполнения</div>
+                                <div class="invalid-message">Поле обязательно для заполнения</div>
                               </div>
                               <div class="form-group">
                                 <label for="label1">*Должность</label>
@@ -157,14 +157,14 @@
                                   <option>Репетитор</option>
                                   <option>Охранник</option>
                                 </select>
-                                <div class="invalid-massege">Поле обязательно для заполнения</div>
+                                <div class="invalid-message">Поле обязательно для заполнения</div>
                               </div>
                               <div class="form-group">
                                 <label for="label1">*Дата рождения</label>
                                 <div id="sandbox-container">
                                   <input type="text" placeholder="Выберете дату">
                                 </div>
-                                <div class="invalid-massege">Поле обязательно для заполнения</div>
+                                <div class="invalid-message">Поле обязательно для заполнения</div>
                               </div>
                               <div class="form-group">
                                 <label for="label1">Город проживания</label>
@@ -182,7 +182,7 @@
                                   <option>Другие страны</option>
                                   <option class="another">Другой регион</option>
                                 </select>
-                                <div class="invalid-massege">Поле обязательно для заполнения</div>
+                                <div class="invalid-message">Поле обязательно для заполнения</div>
                               </div>
                               <div class="form-group">
                                 <label for="label1">*Город поиска работы</label>
@@ -199,7 +199,7 @@
                                   <option>Другие страны</option>
                                   <option class="another">Другой регион</option>
                                 </select>
-                                <div class="invalid-massege">Поле обязательно для заполнения</div>
+                                <div class="invalid-message">Поле обязательно для заполнения</div>
                               </div>
                               <div class="form-group">
                                 <label for="label1">*Фотография работодателя</label>
@@ -273,7 +273,7 @@
           </aside>
           <div id="content">
             <div class="holder">
-              <h1 class="h1">Работодатель в черном списке</h1>
+              <h1>Работодатель в черном списке</h1>
               <div class="agent-block">
                 <div class="wrap-box">
                   <div class="img-block">
@@ -396,7 +396,7 @@
                     <p class="text-center">Задайте интересующий вас вопрос, и  мы вышлем письмо с ответом на ваш e-mail  в течение ? часов</p>
                       <div class="form-group">
                         <input type="email" placeholder="E-mail">
-                        <div class="invalid-massege">Невалидный имейл</div>
+                        <div class="invalid-message">Невалидный имейл</div>
                       </div>
                       <div class="form-group">
                         <textarea cols="3" rows="2" placeholder="Текст сообщения"></textarea>
