--- a/markup/homey-black-list-employer-personal(withoutautorization).html
+++ b/markup/homey-black-list-employer-personal(withoutautorization).html
@@ -147,7 +147,7 @@
           </aside>
           <div id="content">
             <div class="holder">
-              <h1 class="h1">Работодатель в черном списке</h1>
+              <h1>Работодатель в черном списке</h1>
               <div class="agent-block">
                 <div class="wrap-box">
                   <div class="img-block">
@@ -291,7 +291,7 @@
                     <p class="text-center">Задайте интересующий вас вопрос, и  мы вышлем письмо с ответом на ваш e-mail  в течение ? часов</p>
                       <div class="form-group">
                         <input type="email" placeholder="E-mail">
-                        <div class="invalid-massege">Невалидный имейл</div>
+                        <div class="invalid-message">Невалидный имейл</div>
                       </div>
                       <div class="form-group">
                         <textarea cols="3" rows="2" placeholder="Текст сообщения"></textarea>
