--- a/markup/homey-cabinet-employer.html
+++ b/markup/homey-cabinet-employer.html
@@ -349,7 +349,7 @@
                                 <li><a href="#" class="check"></a></li>
                                 <li><a href="#" class="del"></a></li>
                               </ul>
-                              <div class="invalid-massege">Поле обязательно для заполнения</div>
+                              <div class="invalid-message">Поле обязательно для заполнения</div>
                             </div>
                           </fieldset>
                         </form>
@@ -468,7 +468,7 @@
                           <div class="form-group">
                             <label>Подтверждение пароля</label>
                             <input type="password" placeholder="Введите новый пароль еще раз">
-                            <div class="invalid-massege">Пароли не совпадают</div>
+                            <div class="invalid-message">Пароли не совпадают</div>
                           </div>
                         </fieldset>
                       </form>
@@ -722,7 +722,7 @@
                     <p class="text-center">Задайте интересующий вас вопрос, и  мы вышлем письмо с ответом на ваш e-mail  в течение ? часов</p>
                       <div class="form-group">
                         <input type="email" placeholder="E-mail">
-                        <div class="invalid-massege">Невалидный имейл</div>
+                        <div class="invalid-message">Невалидный имейл</div>
                       </div>
                       <div class="form-group">
                         <textarea cols="3" rows="2" placeholder="Текст сообщения"></textarea>
