--- a/markup/homey-employee.html
+++ b/markup/homey-employee.html
@@ -663,7 +663,6 @@
                     </div>
                     <div class="form-group">
                       <label>*Город проживания</label>
-                      <input type="text" placeholder="Имя и отчество" required>
                       <select>
                         <option>Выберете город</option>
                         <option>Вся Украина</option>
@@ -681,7 +680,6 @@
                     </div>
                     <div class="form-group">
                       <label>Район проживания</label>
-                      <input type="text" placeholder="Имя и отчество" required>
                       <select>
                         <option>Выберете город</option>
                         <option>Вся Украина</option>
@@ -727,38 +725,29 @@
                 <div class="form-frame">
                   <h3><span>опыт работы</span></h3>
                   <div class="form-group">
-                    <label>*Опыт работы в семьях</label>
-                    <select>
-                      <option>Укажите опыт</option>
-                      <option>Укажите опыт</option>
-                      <option>Укажите опыт</option>
-                    </select>
-                    <div class="invalid-message">Поле обязательно для заполнения</div>
+                    <div class="row">
+                      <div class="col-md-8">
+                        <label>*Опыт работы в семьях</label>
+                        <select>
+                          <option>Укажите опыт</option>
+                          <option>Укажите опыт</option>
+                          <option>Укажите опыт</option>
+                        </select>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="label9">*Наличие рекомендаций</label>
                   <p>Укажите, есть ли у вас рекомендации от прежних работодателей или возможно ли будет их получить при необходимости в дальнейшем.</p>
-                  <select>
-                    <option>Выберите рекомендации</option>
-                    <option>Выберите рекомендации</option>
-                    <option>Выберите рекомендации</option>
-                  </select>
-                </div>
-                <div class="form-frame">
-                  <h3><span>Иностранные языки</span></h3>
-                  <div class="form-group">
-                    <label>*Владеете ли вы иностранными языками:</label>
-                    <ul class="form-row">
-                      <li>
-                        <input type="radio2" id="radio" checked name="group2">
-                        <label for="radio2">Да, владею</label>
-                      </li>
-                      <li>
-                        <input type="radio3" id="radio" checked name="group2">
-                        <label for="radio3">Нет. не владею</label>
-                      </li>
-                    </ul>
+                  <div class="row">
+                    <div class="col-md-8">
+                      <select>
+                        <option>Выберите рекомендации</option>
+                        <option>Выберите рекомендации</option>
+                        <option>Выберите рекомендации</option>
+                      </select>
+                    </div>
                   </div>
                 </div>
                 <div class="form-frame">
@@ -767,11 +756,11 @@
                     <label>*Владеете ли вы иностранными языками:</label>
                     <ul class="form-row">
                       <li>
-                        <input type="radio2" id="radio" checked name="group2">
+                        <input type="radio" id="radio2" checked name="group2">
                         <label for="radio2">Да, владею</label>
                       </li>
                       <li>
-                        <input type="radio3" id="radio" checked name="group2">
+                        <input type="radio" id="radio3" checked name="group2">
                         <label for="radio3">Нет. не владею</label>
                       </li>
                     </ul>
@@ -801,12 +790,13 @@
                         </select>
                       </div>
                       <div class="form-group">
-                        <label>*Наличие личного автомобиля:</label>
+                        <label>*Готовность работать на своем авто:</label>
                         <select>
-                          <option>*Готовность работать на своем авто:</option>
-                          <option>*Готовность работать на своем авто:</option>
-                          <option>*Готовность работать на своем авто:</option>
-                          <option>*Готовность работать на своем авто:</option>
+                          <option>Укажите готовность</option>
+                          <option>Укажите готовность</option>
+                          <option>Укажите готовность</option>
+                          <option>Укажите готовность</option>
+                          <option>Укажите готовность</option>
                         </select>
                       </div>
                     </div>
@@ -853,7 +843,7 @@
                   <label for="label8">*Заработная плата</label>
                   <div class="till">От:</div>
                   <div class="row">
-                    <div class="col-md-10">
+                    <div class="col-md-11">
                       <div class="col1">
                         <input id="label8" type="text" placeholder="Введите сумму">
                       </div>
@@ -873,7 +863,7 @@
                   </div>
                   <div class="till">До:</div>
                   <div class="row">
-                    <div class="col-md-10">
+                    <div class="col-md-11">
                       <div class="col1">
                         <input type="text" placeholder="Введите сумму">
                       </div>
@@ -906,18 +896,17 @@
                           <label for="label3">3-7 лет</label>
                         </div>
                         </div>
-                      </div>
-                      <div class="col-md-6 col-sm-6">
-                        <div class="checkbox">
-                          <input id="label5" type="checkbox">
-                          <label for="label5">7-14 лет</label>
+                        <div class="col-md-6 col-sm-6">
+                          <div class="checkbox">
+                            <input id="label5" type="checkbox">
+                            <label for="label5">7-14 лет</label>
+                          </div>
+                          <div class="checkbox">
+                            <input id="label6" type="checkbox">
+                            <label for="label6">14-18 лет</label>
+                          </div>
                         </div>
-                        <div class="checkbox">
-                          <input id="label6" type="checkbox">
-                          <label for="label6">14-18 лет</label>
-                        </div>
                       </div>
-                    </div>
                   </div>
                   <div class="form-frame">
                     <label for="label9">*Буду выполнять обязанности:</label>
@@ -935,9 +924,9 @@
                       <textarea class="textarea2" id="label9" cols="3" rows="2" placeholder="Опишите вакансию"></textarea>
                     </div>
                   </div>
-                <div class="modal-footer">
-                  <button class="btn pull-right blue" type="submit">Опубликовать</button>
-                </div>
+                  <div class="modal-footer">
+                    <button class="btn pull-right blue" type="submit">Опубликовать</button>
+                  </div>
                </form>
             </div>
           </div>
@@ -1055,7 +1044,7 @@
                   <label for="label8">*Заработная плата</label>
                   <div class="till">От:</div>
                   <div class="row">
-                    <div class="col-md-10">
+                    <div class="col-md-11">
                       <div class="col1">
                         <input id="label8" type="text">
                       </div>
@@ -1075,7 +1064,7 @@
                   </div>
                   <div class="till">До:</div>
                   <div class="row">
-                    <div class="col-md-10">
+                    <div class="col-md-11">
                       <div class="col1">
                         <input type="text">
                       </div>
@@ -1107,7 +1096,7 @@
                     <label>*Заработная плата</label>
                     <div class="till">Возраст:</div>
                     <div class="row">
-                      <div class="col-md-10">
+                      <div class="col-md-11">
                         <div class="col1">
                           <select>
                             <option>От</option>
