--- a/markup/homey-note-agency-mailing.html
+++ b/markup/homey-note-agency-mailing.html
@@ -459,9 +459,9 @@
                     </div>
                     <div class="company-info">
                       <h4><span>Доступно только струдникам сайта<br>(заполняется обязательно)</span></h4>
-                      <div class="wrap-box">
-                        <h5 class="pull-left">Свидетельство регистрации компании или ЧП:</h5>
-                        <div class="pull-right btn-set text-right">
+                      <div class="wrap-box alt">
+                        <h5 class="pull-left col-xs-8">Свидетельство регистрации компании или ЧП:</h5>
+                        <div class="col-xs-4 pull-right btn-set text-right">
                           <a href="#" class="change-btn">Изменить</a>
                           <a href="#" class="del-btn">Удалить</a>
                         </div>
