--- a/markup/homey-black-list-employee.html
+++ b/markup/homey-black-list-employee.html
@@ -200,7 +200,66 @@
                       </select>
                     </div>
                     <button type="submit" class="btn red">Найти</button>
+                    <p class="text-right opener-link">
+                      <a role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        Расширенный поиск
+                      </a>
+                    </p>
                   </fieldset>
+                  <div class="collapse" id="collapseExample">
+                    <div class="well">
+                        <div class="filter-box">
+                          <ul class="filter-list">
+                            <li><a href="#">а</a></li>
+                            <li><a href="#">б</a></li>
+                            <li><a href="#">в</a></li>
+                            <li><a href="#">г</a></li>
+                            <li><a href="#">д</a></li>
+                            <li><a href="#">е</a></li>
+                            <li><a href="#">ё</a></li>
+                            <li><a href="#">ж</a></li>
+                            <li><a href="#">з</a></li>
+                            <li><a href="#">и</a></li>
+                            <li><a href="#">й</a></li>
+                            <li><a href="#">к</a></li>
+                            <li><a href="#">л</a></li>
+                            <li><a href="#">м</a></li>
+                            <li><a href="#">н</a></li>
+                            <li><a href="#">о</a></li>
+                            <li><a href="#">п</a></li>
+                            <li><a href="#">р</a></li>
+                            <li><a href="#">с</a></li>
+                            <li><a href="#">т</a></li>
+                            <li><a href="#">у</a></li>
+                            <li><a href="#">ф</a></li>
+                            <li><a href="#">х</a></li>
+                            <li><a href="#">ц</a></li>
+                            <li><a href="#">ч</a></li>
+                            <li><a href="#">ш</a></li>
+                            <li><a href="#">щ</a></li>
+                            <li><a href="#">э</a></li>
+                            <li><a href="#">ю</a></li>
+                            <li><a href="#">я</a></li>
+                          </ul>
+                          <span class="pull-right"><a href="#">Весь список</a></span>
+                        </div>
+                        <div class="row">
+                          <div class="col-md2">
+                            <input type="text" placeholder="Имя">
+                          </div>
+                          <div class="col-md2">
+                            <div id="sandbox-container">
+                              <input type="text" placeholder="Дата рождения">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="opener-box">
+                          <a role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                            Свернуть расширенный поиск
+                          </a>
+                        </div>
+                    </div>
+                  </div>
                 </form>
               </div>
               <div class="filter-box">
@@ -238,7 +297,6 @@
                 </ul>
                 <span class="pull-right"><a href="#">Весь список</a></span>
               </div>
-              <div class="text-frame text-right"><a href="#">Расширенный поиск</a></div>
               <div class="vacation-block">
                 <div class="ico-box">
                   <i class="dislike"><img alt="image description" src="images/dislike.png"></i>
@@ -468,6 +526,8 @@
     <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
     <script src="js/jquery.main.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="js/bootstrap-datepicker.ru.min.js"></script>
     <script type="text/javascript">
       if (navigator.userAgent.match(/IEMobile/10.0/)  navigator.userAgent.match(/MSIE 10.*Touch/)) {
       var msViewportStyle = document.createElement('style')
